--- a/examples/firebase-sample/package.json
+++ b/examples/firebase-sample/package.json
@@ -25,9 +25,11 @@
     "shelljs": "^0.5.3"
   },
   "cordovaPlugins": [
-    "cordova-plugin-inappbrowser"
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-whitelist"
   ],
   "cordovaPlatforms": [
-    "ios"
+    "ios",
+    "android"
   ]
 }
